--- a/client/index.html
+++ b/client/index.html
@@ -15,89 +15,13 @@
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="index.css">
 </head>
-<body> <div class="div row">
-    <div class="card text-bg-danger mb-3 col-6  " style="width: 18rem; height: 11rem;">
-        <div class="card"></div>
-        <div class="card-body">
-          <h5 class="card-title"></h5>
-          <p class="card-text">
-          </p>
-        </div>
-      </div>
-      <div class="card text-bg-info mb-3  col-6" style="width: 18rem; height: 11rem;">
-        <div class="card"></div>
-        <div class="card-body">
-          <h5 class="card-title"></h5>
-          <p class="card-text">
-          </p>
-        </div>
-      </div>
-      <div class="card text-bg-success mb-3 " style="width: 18rem; height: 11rem;">
-        <div class="card"></div>
-        <div class="card-body">
-          <h5 class="card-title"></h5>
-          <p class="card-text">
-          </p>
-        </div>
-      </div>
-      <div class="card text-bg-secondary mb-3 " style="width: 18rem; height: 11rem;">
-        <div class="card"></div>
-        <div class="card-body">
-          <h5 class="card-title"></h5>
-          <p class="card-text">
-          </p>
-        </div>
-      </div>
-      <!-- <div class="card text-bg-secondary mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Secondary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card text-bg-success mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Success card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card text-bg-danger mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Danger card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div> -->
-    </div>
-      <!-- </div>
-      <div class="card text-bg-warning mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Warning card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Info card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card text-bg-light mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Light card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Dark card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div> -->
+<body> <div class="bosh">
+    <button class="btn">yangi so'z qo'shish</button>
+    <button class="btn">Dastur haiqda </button>
+    <button class="btn">So'zlar bilan sinov</button>
+    <button class="btn">Ovozli sinov</button>
+</div>
+      
 
     <script src="script.js"></script>
 </body>
