--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Smile</title>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
@@ -17,16 +17,15 @@
 </head>
 
 <body>
-    <div class="bosh row">
-        
-            <button class="btn col-6">yangi so'z qo'shish</button>
-            <button class="btn col-6">Dastur haiqda </button>
-            <div class="w-100 d-none d-md-block"></div>
-            <button class="btn">So'zlar bilan sinov</button>
-            <button class="btn">Ovozli sinov</button>
-        
-
-    </div>
+        <div class="container">
+            <div class="bosh row">
+              <button class="btn col-6 col-sm-4">yangi so'z qo'shish</button>
+              <button class="btn col-6 col-sm-4">Dastur haiqda </button>
+              <!-- <div class="w-100 d-none d-md-block"></div> -->
+              <button class="btn col-6 col-sm-4">So'zlar bilan sinov</button>
+              <button class="btn col-6 col-sm-4">Ovozli sinov</button>
+            </div>
+          </div>
 
 
     <script src="script.js"></script>
