--- a/client/word test/index.html
+++ b/client/word test/index.html
@@ -12,8 +12,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="example-screen">
+        <div class="req">
             <p class="bottom"></p>
+        </div>
+        <div class="res">
+            <input class="bottom"/>
         </div>
     </div>
     <script src="index.js"></script>
