--- a/client/word test/index.html
+++ b/client/word test/index.html
@@ -5,18 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Sinov sahifasi</title>
-    <link rel="stylesheet" href="index.css">
-    <!-- Bootstrap CSS -->
+    <meta name="theme-color" content="black" />
+    <title>Word test</title>
+    <!--     Bootstrap JS    -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <!--     Bootstrap CSS       -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- Custom CSS     -->
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
+    <ul class=" nav nav-pills mb-3" id="pills-tab" role="tablist" style="justify-content: center">
+        <li class="nav-item" role="presentation">
+            <a href="../index.html"><button class="nav-link" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button></a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a href="../new word/index.html"><button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false" value="1">New word</button></a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a href="../word test/index.html"> <button class="nav-link active" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false" value="2">Word test</button></a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a href="../voiced test/index.html"> <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" value="3">Voiced test</button></a>
+        </li>
+    </ul>
+    <div class="row">
+        <p class="col-4 p">All: <span class="all">0</span></p>
+    </div>
     <div class="container">
         <div class="req">
             <p class="bottom"></p>
         </div>
         <div class="res">
-            <input class="bottom"/>
+            <input class="bottom" placeholder="" class="form-control" />
         </div>
     </div>
     <script src="index.js"></script>
