--- a/client/word test/index.html
+++ b/client/word test/index.html
@@ -13,10 +13,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Custom CSS     -->
     <link rel="stylesheet" href="index.css">
+    
+
+<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css"><script src="../bootstrap/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
-    <ul class=" nav nav-pills mb-3" id="pills-tab" role="tablist" style="justify-content: center">
+    <ul class=" nav nav-pills mb-3 mt-3" id="pills-tab" role="tablist" style="justify-content: center">
         <li class="nav-item" role="presentation">
             <a href="../index.html"><button class="nav-link" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button></a>
         </li>
@@ -30,15 +34,15 @@
             <a href="../voiced test/index.html"> <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" value="3">Voiced test</button></a>
         </li>
     </ul>
-    <div class="row">
-        <p class="col-4 p">All: <span class="all">0</span></p>
+    <div class="row mt-5 mb-5">
+        <p class="col-4 fw-bold bg-transparent m-auto text-light">All: <span class="text-info">0</span></p>
     </div>
-    <div class="container">
-        <div class="req">
+    <div class="container mt-5 p-5 row mx-auto">
+        <div class="req col-6 col-md-5">
             <p class="bottom"></p>
         </div>
-        <div class="res">
-            <input class="bottom" placeholder="" class="form-control" />
+        <div class="res col-6 col-md-5 pt-2 pt-md-2">
+            <input class="bottom text-info" />
         </div>
     </div>
     <script src="index.js"></script>
