--- a/new word/index.html
+++ b/new word/index.html
@@ -49,13 +49,23 @@
                 <input id="first_languange" placeholder="So'zni kriting" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
             </div>
 
-            <div class=" mt-5 d-flex col-6 input-group input-group-lg ">
+            <div class="mt-5 col-6 input-group input-group-lg ">
                 <input id="second_languange" placeholder="add the word" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
                 <span class="input-group-text" id="inputGroup-sizing-lg">
                     Deutsch
                 </span>
-
             </div>
+            <!-- <div class="dropdown input-group input-group-lg">
+                <button class="input-group-text dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="inputGroup-sizing-lg">
+                  Dropdown button
+                </button>
+                <input id="second_languange" placeholder="add the word" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </div> -->
             <div class="d-grid text-center mx-auto col-6 mt-5">
                 <button id="add" class="btn btn-info" type="button">
                     Qo'shish
