--- a/word test/index.html
+++ b/word test/index.html
@@ -34,16 +34,15 @@
             <a href="../voiced test/index.html"> <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" value="3">Voiced test</button></a>
         </li>
     </ul>
-    <div class="row mt-5 mb-5">
-        <p class="col-4 fw-bold bg-transparent m-auto text-light">All: <span class="text-info">0</span></p>
-    </div>
-    <div class="container mt-5 p-5 row mx-auto">
-        <div class="req col-6 col-md-5">
+    <div class="container-md mt-5 p-5 row mx-auto">
+        <div class="req mx-auto">
             <p class="bottom"></p>
         </div>
-        <div class="res col-6 col-md-5 pt-2 pt-md-2">
-            <input class="bottom text-info" />
+        <div class="res mt-3 mx-auto col-12 col-md-6 pt-2 pt-md-2">
+            <input class="text-light" />
         </div>
+        <p class="fw-bold bg-transparent text-center m-auto text-light">Amout: <span id="number">0</span></p>
+
     </div>
     <script src="index.js"></script>
     <!-- Bootstrap JS -->
