--- a/word test/index.html
+++ b/word test/index.html
@@ -14,7 +14,7 @@
     <!-- Custom CSS     -->
     <link rel="stylesheet" href="index.css">
     
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css"><script src="../bootstrap/js/bootstrap.min.js"></script>
 
 </head>
@@ -38,11 +38,14 @@
         <div class="req mx-auto">
             <p class="bottom"></p>
         </div>
-        <div class="res mt-3 mx-auto col-12 col-md-6 pt-2 pt-md-2">
+        <div class="res mt-3 mx-auto col-12 col-md-8 pt-2 pt-md-2">
             <input class="text-light" />
         </div>
-        <p class="fw-bold bg-transparent text-center m-auto text-light">Amout: <span id="number">0</span></p>
-
+        <div class="row col-md-8 mx-auto">
+        <button class="btn btn-primary sound col-3 fw-bold text-center m-auto text-light"><i class="fa-solid fa-microphone"></i></button>
+        <p class="fw-bold col-6 bg-transparent text-center m-auto text-primary">Amout: <span id="number">0</span></p>
+        <button class="btn btn-primary sound col-3 fw-bold text-center m-auto text-light"><i class="fa-solid fa-volume-high"></i></button>
+        </div>
     </div>
     <script src="index.js"></script>
     <!-- Bootstrap JS -->
