--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./Carousel_1.png" class="d-block w-100" alt="...">
+                        <video width= "900" height=" 600" controls>
+                            <source src="video.mp4" type="video/mp4">
+                            
+                          
+                          </video>
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
